# 5-sem

./: .gitignore
jftt/1lab/: FA.jl  KMP.jl
jftt/3lab/: CMakeLists.txt
jftt/3lab/blex/: CMakeLists.txt  Makefile  calc  calc.cpp  calc.l  calc.y  calc_l.c  calc_l.cc  calc_y.c  calc_y.cc  calc_y.h  calc_y.hh  calc_y.output  my_arithmetic.c  my_arithmetic.hh
jftt/3lab/python/: calc.py  calcLexer.py  calcParser.py  example.py  parser.out  parsetab.py
on/: backup
on/1lab/: ceps  ceps.c  zad1.jl  zad2.jl  zad3.jl  zad4.jl  zad5.jl  zad6.jl  zad7.csv  zad7.jl
on/2lab/: hilbert.csv  zad2.jl  zad3.jl  zad4.jl  zad5.jl  zad6.jl
on/3lab/: bisekcja.jl  newton.jl  numericalAnalysis.jl  sieczne.jl  test_bisekcja.jl  test_newton.jl  test_sieczne.jl  zad4.jl  zad5.jl  zad6.jl
on/4lab/: Interpolation.jl  test.jl  zad5.jl  zad6.jl
on/5lab/: matrixSolver.jl  output.txt  reader.jl  test.jl
pf/: helloworld  test.py
pf/kol2/: zad.hs
pf/kolos/: brudnopis.txt  notatki.txt  zad1.py  zad2.txt  zad3.hs
pf/kolos2/: zad1  zad2.txt  zad3
pf/lab/: zad16.hs  zad26.hs  zad37.hs  zad41.hs  zad42.hs
pf/lec2/: lab_1_12.txt  notes
sp/: c  sprawko.cast  tee  zad2.sh
sp/1lab/: aaa  sprawozdanie  ss  zad3.sh  zad4.sh  zad5.sh  zad6.sh
sp/2lab/: zad1.sh
sp/3lab/: sprawko.cast  sprawko_log  sprawko_zad2_3.cast
sp/4lab/: sprawko_zad1.cast  sprawko_zad1_1.cast  sprawko_zad1_2.cast  sprawko_zad2.cast  sprawko_zad21.cast  sprawko_zad22.cast  sprawko_zad23.cast
sp/srodowisko/: sprawozdanie
zes/oracle_keys/: ssh-key-2022-11-21.key  ssh-key-2022-11-21.key.pub  test.txt
(+64 files in other folders)
